<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_marginRight="@dimen/dp_30"
        android:text="@string/exit"
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/recycler_view"
        android:id="@+id/button_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginLeft="@dimen/dp_30"
        android:text="@string/card_view"
        android:id="@+id/button_CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>