<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dp_30"
            android:text="@string/add_info_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/dp_10"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_add"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="fitXY"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textImeMultiLine"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_20"
            android:id="@+id/text_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp_20"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            />
        <Button
            android:id="@+id/button_addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:text="@string/add"
            />
    </LinearLayout>
</LinearLayout>